[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -1,2 +1,27 @@
 <html>
+     <head>
+         <title>
+             Article one by Vaishnavi Ashokan
+         </title>
+     </head>
+     <body>
+         <div>
+             <a href="/">Home</a>
+             </div>
+             <hr/>
+             <h3>
+                 ARTICLE ONE
+             </h3>
+             <div>
+                 MARCH 28,2018
+             </div>
+             <div>
+                 <p>
+                 This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one.v This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one. This is the conyent of article one.
+                 </p>
+                 <p>
+                     By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it.
+                 </p>
+             </div>
+     </body>
 </html>
