[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -3,8 +3,18 @@
          <title>
              Article one by Vaishnavi Ashokan
          </title>
+         <style>
+             .container{
+                 max-width:800px;
+                 font-family:sans-serif;
+                 background:red;
+                 color:orange;
+                 margin:0 auto;
+             }
+         </style>
      </head>
      <body>
+         <div clas="container">
          <div>
              <a href="/">Home</a>
              </div>
@@ -23,5 +33,6 @@
                      By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it. By vaishnavi,and has new things in it.
                  </p>
              </div>
+        </div>
      </body>
 </html>
