[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,8 +4,18 @@
              Article three | Vaishnavi Ashokan
          </title>
          <meta name="viewport" content="width=device-width,initial-scale=1"/>
+         <style>
+             .container{
+                 max-width:800px;
+                 font-family:sans-serif;
+                 
+                 color:orange;
+                 margin:0 auto;
+             }
+             </style>
      </head>
      <body>
+         <div clas="container">
          <div>
              <a href="/">Home</a>
              </div>
@@ -20,6 +30,7 @@
               <p>
                  This is the content of article three. 
                </p>   
+       </div>
        </div>
      </body>
 </html>
